--- a/Script/LanguageFile/LanguageFileConfiguration.json
+++ b/Script/LanguageFile/LanguageFileConfiguration.json
@@ -3,6 +3,8 @@
     "Name": "EPC01 - Software",
     "LanguageFileFolderPath": "C:/Git/cfn/cfn-code/150_Software/10_SW/i18n/",
     "LanguageTagRegexPattern": "ApplicationText_(.*).xml",
+    "FileType": "XML",
+    "RootTagName": "TextPool",
     "ItemTagName": "Item",
     "KeyAttributeIndex": 0,
     "Attributes": [
@@ -22,6 +24,8 @@
     "Name": "EPC01 - Firmware",
     "LanguageFileFolderPath": "C:/Git/cfn/cfn-code/140_Firmware/Oetiker_Control_Unit/i18n/",
     "LanguageTagRegexPattern": "ApplicationText_(.*).xml",
+    "FileType": "XML",
+    "RootTagName": "TextPool",
     "ItemTagName": "Item",
     "KeyAttributeIndex": 0,
     "Attributes": [
@@ -57,6 +61,49 @@
           "UNKNOWN",
           "unknown"
         ]
+      }
+    ]
+  },
+  {
+    "Name": "Test",
+    "LanguageFileFolderPath": "D:\\Godot-Projects\\epc01LanguageFileChanger\\TestLanguage\\",
+    "LanguageTagRegexPattern": "TestFile_(.*).xml",
+    "FileType": "XML",
+    "RootTagName": "TextPool",
+    "ItemTagName": "ItemText",
+    "KeyAttributeIndex": 0,
+    "Attributes": [
+      {
+        "Name": "key2",
+        "DisplayName": "Key",
+        "IsString": true
+      },
+      {
+        "Name": "info2",
+        "DisplayName": "Info",
+        "IsString": true
+      },
+      {
+        "Name": "option",
+        "DisplayName": "Option",
+        "EnumValues": [
+          "A",
+          "B",
+          "C",
+          "D",
+          "E",
+          "F"
+        ]
+      },
+      {
+        "Name": "number",
+        "DisplayName": "Number",
+        "IsInt": true
+      },
+      {
+        "Name": "number2",
+        "DisplayName": "Number2",
+        "IsFloat": true
       }
     ]
   }
